# fast-api-classification

./: .dockerignore  Dockerfile  fly.toml  http.rest  justfile  main.py  pyproject.toml
labs/: labs.ipynb
labs/data/: data.xlsx
model/: model.pkl
web/: package.json  pnpm-lock.yaml  tailwind.config.mjs
web/src/components/: Form.svelte  Home.svelte  Layout.astro  Table.svelte
web/src/helper/: local_database.ts
web/src/pages/: index.astro
web/src/types/: predict.ts
