[tool.poetry]
name = "predict"
version = "0.1.0"
description = ""
authors = ["Argana Phangquestian <arganaphangquestian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
ipykernel = "^6.29.1"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
pandas = "^2.2.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
